k8s/opa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opa-ingress
  namespace: opa
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opa-server
                port:
                  number: 8181
